--- a/web/public/index.html
+++ b/web/public/index.html
@@ -17,7 +17,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Share your pics. Powered by Firebase.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Friendly Pix</title>
+  <title>Fartão</title>
   <link rel="shortcut icon" href="/images/favicon.png">
 
   <!-- Disable tap highlight on IE -->
@@ -66,11 +66,11 @@
 
 <!-- Splash screen -->
 <section id="page-splash">
-  <h3 class="fp-logo"><i class="material-icons">photo</i> Friendly Pix</h3>
-  <div class="fp-caption">The friendliest way to share your pics</div>
+  <h3 class="fp-logo"><i class="material-icons">receipt</i> Fartão</h3>
+  <div class="fp-caption">Seu cartão de fidelidade online</div>
   <div class="fp-signed-out-only fp-initially-hidden">
     <div id="firebaseui-auth-container" class="fp-signed-out-only fp-initially-hidden"></div>
-    <a class="fp-skip" href="/feed">skip sign in</a>
+    <a class="fp-skip" href="/feed">pular login</a>
   </div>
 </section>
 
@@ -81,7 +81,7 @@
     <div class="mdl-layout__header-row fp-titlebar">
 
       <!-- Logo -->
-      <h3 class="fp-logo"><a href="/feed"><i class="material-icons">photo</i> Friendly Pix</a></h3>
+      <h3 class="fp-logo"><a href="/feed"><i class="material-icons">receipt</i> Fartão</a></h3>
       <div class="mdl-layout-spacer"></div>
 
       <!-- Search bar -->
@@ -91,14 +91,14 @@
         </label>
         <div class="mdl-textfield__expandable-holder">
           <input class="mdl-textfield__input" type="text" id="searchQuery">
-          <label class="mdl-textfield__label" for="searchQuery">Enter your query...</label>
+          <label class="mdl-textfield__label" for="searchQuery">Digite um texto</label>
         </div>
         <div id="fp-searchResults" class="mdl-card mdl-shadow--2dp"></div>
       </div>
 
       <!-- Singed-in User Info -->
       <div class="mdl-cell--hide-phone">
-        <a href="/"><button class="fp-sign-in-button fp-signed-out-only mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Sign in</button></a>
+        <a href="/"><button class="fp-sign-in-button fp-signed-out-only mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Logar</button></a>
         <div class="fp-signed-in-user-container mdl-cell--hide-phone fp-signed-in-only">
           <a class="fp-usernamelink mdl-button mdl-js-button">
             <div class="fp-avatar"></div>
@@ -115,7 +115,7 @@
         <a href="/about">
           <li class="mdl-menu__item"><i class="material-icons">perm_contact_calendar</i> About - Help - Contact</li>
         </a>
-        <li class="fp-sign-out mdl-menu__item fp-signed-in-only"><i class="material-icons">exit_to_app</i> Sign out</li>
+        <li class="fp-sign-out mdl-menu__item fp-signed-in-only"><i class="material-icons">exit_to_app</i> Sair</li>
       </ul>
     </div>
 
@@ -123,21 +123,21 @@
     <div class="fp-tab mdl-layout__header-row mdl-cell--hide-phone mdl-color--light-blue-600">
       <div class="mdl-tab">
         <a href="/" id="fp-menu-home" class="mdl-layout__tab fp-signed-in-only is-active mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">home</i> Home</a>
-        <a href="/feed" id="fp-menu-feed" class="mdl-layout__tab mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">trending_up</i> Feed</a>
+        <a href="/feed" id="fp-menu-feed" class="mdl-layout__tab mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">whatshot</i> Carimbos</a>
         <input id="fp-mediacapture" type="file" accept="image/*;capture=camera">
         <button class="fp-signed-in-only mdl-button mdl-js-button mdl-button--fab mdl-cell--hide-tablet mdl-color--amber-400 mdl-shadow--4dp mdl-js-ripple-effect" id="add">
-          <i class="material-icons">file_upload</i>
+          <i class="material-icons">add</i>
         </button>
       </div>
     </div>
     <button class="fp-signed-in-only mdl-cell--hide-desktop mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--amber-400 mdl-shadow--4dp" id="add-floating">
-      <i class="material-icons">photo_camera</i>
+      <i class="material-icons">add</i>
     </button>
   </header>
 
   <!-- Drawer menu -->
   <div class="mdl-cell--hide-desktop mdl-cell--hide-tablet mdl-layout__drawer">
-    <a href="/" class="fp-signed-out-only"><button class="fp-sign-in-button mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Sign in</button></a>
+    <a href="/" class="fp-signed-out-only"><button class="fp-sign-in-button mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Logar</button></a>
     <div class="fp-signed-in-user-container mdl-color--light-blue-700 fp-signed-in-only">
       <a class="fp-usernamelink">
         <div class="fp-avatar"></div>
@@ -146,11 +146,11 @@
     </div>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link is-active fp-signed-in-only" href="/"><i class="material-icons">home</i> Home</a>
-      <a class="mdl-navigation__link" href="/feed"><i class="material-icons">trending_up</i> Feed</a>
+      <a class="mdl-navigation__link" href="/feed"><i class="material-icons">whatshot</i> Carimbos</a>
       <hr />
-      <a class="mdl-navigation__link" href="/about"><i class="material-icons">perm_contact_calendar</i> About - Help - Contact</a>
+      <a class="mdl-navigation__link" href="/about"><i class="material-icons">perm_contact_calendar</i> Sobre</a>
       <hr class="fp-signed-in-only"/>
-      <a class="fp-sign-out mdl-navigation__link fp-signed-in-only"><i class="material-icons">exit_to_app</i> Sign Out</a>
+      <a class="fp-sign-out mdl-navigation__link fp-signed-in-only"><i class="material-icons">exit_to_app</i> Sair</a>
     </nav>
   </div>
 
@@ -169,12 +169,11 @@
            <div class="mdl-card__supporting-text mdl-color-text--grey-600">
              <i class="fp-info material-icons">help</i>
              <div>
-               <p>Start following people to see their posts!</p>
+               <p><strong>Concentre todos os cartões de fidelidade em um só lugar!</strong></p>
                <p>
-                 Use the <strong><i class="material-icons">search</i> search bar</strong> to find people you know and have
-                 a look at the <a href="/feed"><i class="material-icons">trending_up</i> feed</a> to discover interesting people.
+                 Use o <strong><i class="material-icons">add</i> </strong> quando estiver em um estabelecimento parceiro
                </p>
-               <p>Then <i class="material-icons">favorite</i> like and comment their posts!</p>
+               <p>Os seus ultimos "carimbos" ficarão aqui <i class="material-icons">whatshot</i> </p>
                </div>
            </div>
         </div>
@@ -198,24 +197,7 @@
         <div class="mdl-card__supporting-text mdl-color-text--grey-600">
           <i class="fp-info material-icons">info</i>
           <div>
-            <p>Friendly Pix is a photo sharing app showcasing the use of the <a href="https://firebase.google.com">Firebase Platform</a>.</p>
-          </div>
-        </div>
-      </div>
-      <div class="fp-help mdl-card mdl-shadow--2dp mdl-cell
-                  mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-        <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          <i class="fp-info material-icons">help</i>
-          <div>
-            <p>Start following people to see their posts in your <a href="/"><i class="material-icons">home</i>home</a>!</p>
-            <p>
-              Use the <strong><i class="material-icons">search</i>search bar</strong> to find people you know and have
-              a look at the <a href="/feed"><i class="material-icons">trending_up</i>feed</a> to discover interesting people.
-            </p>
-            <p>Then <i class="material-icons">favorite</i>like and comment their posts!</p>
-            <p>
-              Share your pics with your friends using the <i class="material-icons">file_upload</i>or <i class="material-icons">photo_camera</i>buttons.
-            </p>
+            <p>Food graphic by <a href="http://www.flaticon.com/authors/freepik">Freepik</a> from <a href="http://www.flaticon.com/">Flaticon</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>. Made with <a href="http://logomakr.com" title="Logo Maker">Logo Maker</a> - <a href="http://www.1001freefonts.com/amaranth.font" title="Font">Font</a></p>
           </div>
         </div>
       </div>
@@ -224,7 +206,7 @@
         <div class="mdl-card__supporting-text mdl-color-text--grey-600">
           <i class="fp-info material-icons">contacts</i>
           <div>
-            <p>Feel free to file issues on our <a href="https://github.com/firebase/friendlypix">GitHub repo</a>.</p>
+            <p>Fique à vontade em entrar em <a href="http://johntheo.com.br">contato</a>.</p>
           </div>
         </div>
       </div>
