--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,13 +11,13 @@
   See the License for the specific language governing permissions and
   limitations under the License
 -->
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Share your pics. Powered by Firebase.">
+  <meta name="description" content="Guarde seus carimbos de fidelidade. Powered by Firebase.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fartão</title>
+  <title>Fidelium</title>
   <link rel="shortcut icon" href="/images/favicon.png">
 
   <!-- Disable tap highlight on IE -->
@@ -28,23 +28,23 @@
 
   <!-- Add to home screen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="Friendly Pix">
-  <meta name="theme-color" content="#303F9F">
-  <link rel="icon" sizes="192x192" href="/images/touch/touch-icon-192x192.png">
-  <link rel="icon" sizes="128x128" href="/images/touch/touch-icon-128x128.png">
+  <meta name="application-name" content="Fidelium">
+  <meta name="theme-color" content="#c2185b">
+  <link rel="icon" sizes="192x192" href="/images/icons/android-chrome-192x192.png">
+  <link rel="icon" sizes="144x144" href="/images/icons/android-chrome-144x144.png">
 
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
-  <link rel="apple-touch-icon" href="/images/touch/touch-icon-180x180.png">
-  <link rel="apple-touch-icon-precomposed" href="/images/touch/touch-icon-180x180.png">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
+  <meta name="apple-mobile-web-app-title" content="Fidelium">
+  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon-precomposed" href="/images/icons/apple-touch-icon-180x180.png">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#c2185b">
 
   <!-- Tile icon for Win8 -->
-  <meta name="msapplication-TileImage" content="/images/touch/touch-icon-144x144.png">
-  <meta name="msapplication-TileColor" content="#3372DF">
-  <meta name="msapplication-navbutton-color" content="#303F9F">
+  <meta name="msapplication-TileImage" content="/images/icons/android-chrome-144x144.png">
+  <meta name="msapplication-TileColor" content="#4db6ac">
+  <meta name="msapplication-navbutton-color" content="#c2185b">
 
   <!-- Material Design Lite  -->
   <link rel="stylesheet" href="/libs/material-design-lite/material.min.css">
@@ -66,7 +66,7 @@
 
 <!-- Splash screen -->
 <section id="page-splash">
-  <h3 class="fp-logo"><i class="material-icons">receipt</i> Fartão</h3>
+  <h3 class="fp-logo"><i class="material-icons">receipt</i> Fidelium</h3>
   <div class="fp-caption">Seu cartão de fidelidade online</div>
   <div class="fp-signed-out-only fp-initially-hidden">
     <div id="firebaseui-auth-container" class="fp-signed-out-only fp-initially-hidden"></div>
@@ -77,11 +77,11 @@
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
   <!-- Header section containing logo and menu -->
-  <header class="fp-header mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
+  <header class="fp-header mdl-layout__header mdl-color-text--white mdl-color--pink-700">
     <div class="mdl-layout__header-row fp-titlebar">
 
       <!-- Logo -->
-      <h3 class="fp-logo"><a href="/feed"><i class="material-icons">receipt</i> Fartão</a></h3>
+      <h3 class="fp-logo"><a href="/feed"><i class="material-icons">receipt</i> Fidelium</a></h3>
       <div class="mdl-layout-spacer"></div>
 
       <!-- Search bar -->
@@ -113,17 +113,17 @@
       </button>
       <ul class="fp-menu-list mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="fp-menu">
         <a href="/about">
-          <li class="mdl-menu__item"><i class="material-icons">perm_contact_calendar</i> About - Help - Contact</li>
+          <li class="mdl-menu__item"><i class="material-icons">perm_contact_calendar</i> Sobre</li>
         </a>
         <li class="fp-sign-out mdl-menu__item fp-signed-in-only"><i class="material-icons">exit_to_app</i> Sair</li>
       </ul>
     </div>
 
     <!-- Navigation Bar -->
-    <div class="fp-tab mdl-layout__header-row mdl-cell--hide-phone mdl-color--light-blue-600">
+    <div class="fp-tab mdl-layout__header-row mdl-cell--hide-phone mdl-color--pink-600">
       <div class="mdl-tab">
         <a href="/" id="fp-menu-home" class="mdl-layout__tab fp-signed-in-only is-active mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">home</i> Home</a>
-        <a href="/feed" id="fp-menu-feed" class="mdl-layout__tab mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">whatshot</i> Carimbos</a>
+        <a href="/feed" id="fp-menu-feed" class="mdl-layout__tab mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">inbox</i> Carimbos</a>
         <input id="fp-mediacapture" type="file" accept="image/*;capture=camera">
         <button class="fp-signed-in-only mdl-button mdl-js-button mdl-button--fab mdl-cell--hide-tablet mdl-color--amber-400 mdl-shadow--4dp mdl-js-ripple-effect" id="add">
           <i class="material-icons">add</i>
@@ -138,7 +138,7 @@
   <!-- Drawer menu -->
   <div class="mdl-cell--hide-desktop mdl-cell--hide-tablet mdl-layout__drawer">
     <a href="/" class="fp-signed-out-only"><button class="fp-sign-in-button mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Logar</button></a>
-    <div class="fp-signed-in-user-container mdl-color--light-blue-700 fp-signed-in-only">
+    <div class="fp-signed-in-user-container mdl-color--pink-600 fp-signed-in-only">
       <a class="fp-usernamelink">
         <div class="fp-avatar"></div>
         <div class="fp-username mdl-color-text--white"></div>
@@ -146,7 +146,7 @@
     </div>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link is-active fp-signed-in-only" href="/"><i class="material-icons">home</i> Home</a>
-      <a class="mdl-navigation__link" href="/feed"><i class="material-icons">whatshot</i> Carimbos</a>
+      <a class="mdl-navigation__link" href="/feed"><i class="material-icons">inbox</i> Carimbos</a>
       <hr />
       <a class="mdl-navigation__link" href="/about"><i class="material-icons">perm_contact_calendar</i> Sobre</a>
       <hr class="fp-signed-in-only"/>
@@ -173,7 +173,7 @@
                <p>
                  Use o <strong><i class="material-icons">add</i> </strong> quando estiver em um estabelecimento parceiro
                </p>
-               <p>Os seus ultimos "carimbos" ficarão aqui <i class="material-icons">whatshot</i> </p>
+               <p>Os seus ultimos "carimbos" ficarão aqui <i class="material-icons">inbox</i> </p>
                </div>
            </div>
         </div>
@@ -305,11 +305,11 @@
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyDOf9zw6Rcy3V94EhrdUeJfBpPJMNsZR_E",
-    authDomain: "fartao-3a5cc.firebaseapp.com",
-    databaseURL: "https://fartao-3a5cc.firebaseio.com",
-    storageBucket: "fartao-3a5cc.appspot.com",
-    messagingSenderId: "757418075382"
+    apiKey: "AIzaSyBMLXl1QShDwbQM5DbL-RZc1uEmFHtChUE",
+    authDomain: "fidelium-6770e.firebaseapp.com",
+    databaseURL: "https://fidelium-6770e.firebaseio.com",
+    storageBucket: "fidelium-6770e.appspot.com",
+    messagingSenderId: "877514274517"
   };
   firebase.initializeApp(config);
 </script>
